# esp32-atmosphere

./: .gitignore  CMakeLists.txt  espidf.spdx  partitions.csv  sdkconfig.bak  sdkconfig.old  sdkconfig.test_backup
main/: CMakeLists.txt  bsp_http_server.c  bsp_wifi.c  bsp_wifi.c.bak  bsp_wifi.h  idf_component.yml  main.c
main/bsp/: bsp.c  bsp.c.bak  bsp.h  bsp_adc.c  bsp_adc.h  bsp_breathing_led.c  bsp_breathing_led.h  bsp_drum.c  bsp_drum.h  bsp_es8311.c  bsp_es8311.h  bsp_http_server.c  bsp_http_server.h  bsp_i2c.c  bsp_i2c.h  bsp_i2s.c  bsp_i2s.h  bsp_key.c  bsp_key.h  bsp_keyhandle.c  bsp_keyhandle.h  bsp_led.c  bsp_led.h  bsp_magent.c  bsp_magent.h  bsp_mic.c  bsp_mic.h  bsp_music_play.c  bsp_music_play.h  bsp_music_play_freertos.c  bsp_music_play_freertos.h  bsp_nextion.c  bsp_nextion.h  bsp_pa.c  bsp_pca9557.c  bsp_pca9557.h  bsp_tf.c  bsp_tf.h  version.h
